fix: Scintilla: Horizontal scrollbar doesnt show in non-editor context
https://bugs.activestate.com/show_bug.cgi?id=105950

(integrated from master branch change 5d9f580 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -132,7 +132,7 @@
 }
 
 .hud scrollbar,
-view[type="editor"] scrollbar
+scintilla scrollbar
 {
     border: 0;
     background: transparent;
@@ -146,14 +146,14 @@ view[type="editor"] scrollbar
 
     thumb
     {
-        -moz-appearance: none;
+        -moz-appearance: none !important;
         background: @background-scrollbar-thumb !important;
         border: 0;
     }
 
     thumb:hover
     {
-        -moz-appearance: none;
+        -moz-appearance: none !important;
         background: @background-scrollbar-thumb-hover !important;
     }
 
